[gd_scene load_steps=28 format=3 uid="uid://cfj5p5pgfnywp"]

[ext_resource type="Script" path="res://ScenesUI/Taskbar/start_button.gd" id="1_aypgd"]
[ext_resource type="PackedScene" uid="uid://da4oly47yx3ja" path="res://ScenesUI/Taskbar/start_menu_option.tscn" id="2_1ualm"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/BlockItemSelectUI/board_button.gd" id="2_6vvpu"]
[ext_resource type="Texture2D" uid="uid://1bv2dosit48g" path="res://Assets/GameItems/Spring/jumppad3.png" id="2_pbnvd"]
[ext_resource type="PackedScene" uid="uid://bqo5ano5lk7ug" path="res://Scenes/BlockItem/Board/board.tscn" id="3_c4fdf"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/BlockItemSelectUI/spring_button.gd" id="3_ik2h6"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/power_button.gd" id="4_cnyss"]
[ext_resource type="PackedScene" uid="uid://cp2078khsqx6t" path="res://Scenes/BlockItem/Spring/spring.tscn" id="5_qy6ob"]
[ext_resource type="Texture2D" uid="uid://bst03y15ehpe7" path="res://Assets/UI/TaskBar/tool_hammer.png" id="5_tbosd"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/settings_button.gd" id="6_38i4x"]
[ext_resource type="Texture2D" uid="uid://i2vjnoh88ptw" path="res://Assets/UI/trashcan.png" id="8_p7c8y"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/trashcan_button.gd" id="8_vrpfj"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/level_info.gd" id="9_t2aev"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/restart_button.gd" id="14_f2ywa"]
[ext_resource type="AudioStream" uid="uid://d0guiofpy3ris" path="res://Assets/Audios/Windows XP错误(Error de Windows _爱给网_aigei_com.mp3" id="14_gdg6g"]
[ext_resource type="Texture2D" uid="uid://dut1wsmjqr427" path="res://Assets/UI/TaskBar/return.png" id="15_hbe11"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/speed_up.gd" id="16_f2gjf"]
[ext_resource type="Texture2D" uid="uid://dxqgju8leyyj1" path="res://Assets/UI/TaskBar/next.png" id="17_3mgyc"]
[ext_resource type="Script" path="res://ScenesUI/Taskbar/level_menu.gd" id="18_qod6p"]
[ext_resource type="Texture2D" uid="uid://ceujib821uj8n" path="res://Assets/UI/TaskBar/menuGrid.png" id="19_bpsyt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnonj"]
bg_color = Color(0.666667, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbmie"]
bg_color = Color(1, 0.247059, 0.188235, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxws7"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd8k4"]
bg_color = Color(0.501961, 0.501961, 0.501961, 0.392157)
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bm3y2"]
bg_color = Color(0.4, 0.4, 0.4, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2dh2v"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.784314)
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxh1o"]
bg_color = Color(0.1, 0.1, 0.1, 0.6)

[node name="Taskbar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StartMenuAnchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Start Menu" type="Panel" parent="StartMenuAnchor"]
layout_mode = 1
offset_left = 5.0
offset_top = 50.0
offset_right = 832.0
offset_bottom = 112.0

[node name="BlockItemButton" type="HBoxContainer" parent="StartMenuAnchor/Start Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="BoardButton" parent="StartMenuAnchor/Start Menu/BlockItemButton" instance=ExtResource("2_1ualm")]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
script = ExtResource("2_6vvpu")
block_item_scene = ExtResource("3_c4fdf")
title_text = ""
use_generic_pause_menu = false

[node name="SpringButton" parent="StartMenuAnchor/Start Menu/BlockItemButton" instance=ExtResource("2_1ualm")]
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
script = ExtResource("3_ik2h6")
block_item_scene = ExtResource("5_qy6ob")
title_text = ""
use_generic_pause_menu = false

[node name="TextureRect" parent="StartMenuAnchor/Start Menu/BlockItemButton/SpringButton/HBoxContainer/MarginContainer" index="0"]
texture = ExtResource("2_pbnvd")

[node name="Snake Option" parent="StartMenuAnchor/Start Menu/BlockItemButton" instance=ExtResource("2_1ualm")]
visible = false
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
game_scene = "res://Games/Snake/snake_scene.tscn"
title_text = "Snake"
description_text = "Eat fruit, grow long!"

[node name="Pong Option" parent="StartMenuAnchor/Start Menu/BlockItemButton" instance=ExtResource("2_1ualm")]
visible = false
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
game_scene = "res://Games/Pong/Scenes/pong_main_menu.tscn"
title_text = "Pong"
description_text = "Timeless Classic"

[node name="Cube Scene Option" parent="StartMenuAnchor/Start Menu/BlockItemButton" instance=ExtResource("2_1ualm")]
visible = false
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
title_text = "Cube Scene"
description_text = "THE CUBE. THE CUBE. THE CUBE."

[node name="Power Button" type="Button" parent="StartMenuAnchor/Start Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_lnonj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nbmie")
theme_override_styles/normal = SubResource("StyleBoxFlat_lxws7")
action_mode = 0
icon_alignment = 1
script = ExtResource("4_cnyss")

[node name="Settings Button" type="Button" parent="StartMenuAnchor/Start Menu"]
texture_filter = 6
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -48.0
offset_right = -48.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxFlat_bd8k4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bm3y2")
theme_override_styles/normal = SubResource("StyleBoxFlat_2dh2v")
action_mode = 0
icon_alignment = 1
script = ExtResource("6_38i4x")

[node name="Taskbar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mxh1o")

[node name="ScrollContainer" type="ScrollContainer" parent="Taskbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_right = -94.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Taskbar/ScrollContainer" groups=["taskbar_buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelInfo" type="Control" parent="Taskbar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("9_t2aev")

[node name="MarginContainer" type="MarginContainer" parent="Taskbar/LevelInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -3.0
offset_right = -6.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Taskbar/LevelInfo/MarginContainer"]
layout_mode = 2

[node name="LevelIndex" type="Label" parent="Taskbar/LevelInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "[center]22:22 PM"
horizontal_alignment = 2

[node name="LevelDes" type="Label" parent="Taskbar/LevelInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
text = "[center]69/69/2024"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Taskbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Start Button" type="MarginContainer" parent="Taskbar/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("1_aypgd")

[node name="TextureRect" type="TextureRect" parent="Taskbar/HBoxContainer/Start Button"]
self_modulate = Color(0, 0.792157, 0.952941, 1)
texture_filter = 4
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_tbosd")
expand_mode = 2

[node name="Trashcan" type="MarginContainer" parent="Taskbar/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TrashcanButton" type="Button" parent="Taskbar/HBoxContainer/Trashcan"]
layout_mode = 2
script = ExtResource("8_vrpfj")

[node name="TextureRect" type="TextureRect" parent="Taskbar/HBoxContainer/Trashcan"]
texture_filter = 4
layout_mode = 2
mouse_filter = 2
texture = ExtResource("8_p7c8y")
expand_mode = 2

[node name="RestartButton" type="MarginContainer" parent="Taskbar/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("14_f2ywa")

[node name="Button" type="Button" parent="Taskbar/HBoxContainer/RestartButton"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Taskbar/HBoxContainer/RestartButton"]
texture_filter = 4
layout_mode = 2
mouse_filter = 2
texture = ExtResource("15_hbe11")
expand_mode = 2

[node name="SpeedUp" type="MarginContainer" parent="Taskbar/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("16_f2gjf")

[node name="Button" type="Button" parent="Taskbar/HBoxContainer/SpeedUp"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Taskbar/HBoxContainer/SpeedUp"]
texture_filter = 4
layout_mode = 2
mouse_filter = 2
texture = ExtResource("17_3mgyc")
expand_mode = 2

[node name="LevelMenu" type="MarginContainer" parent="Taskbar/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("18_qod6p")

[node name="Button" type="Button" parent="Taskbar/HBoxContainer/LevelMenu"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Taskbar/HBoxContainer/LevelMenu"]
texture_filter = 4
layout_mode = 2
mouse_filter = 2
texture = ExtResource("19_bpsyt")
expand_mode = 2

[node name="NoItem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_gdg6g")

[connection signal="mouse_entered" from="StartMenuAnchor/Start Menu" to="Taskbar/HBoxContainer/Start Button" method="_on_start_menu_mouse_entered"]
[connection signal="mouse_exited" from="StartMenuAnchor/Start Menu" to="Taskbar/HBoxContainer/Start Button" method="_on_start_menu_mouse_exited"]
[connection signal="pressed" from="StartMenuAnchor/Start Menu/Power Button" to="StartMenuAnchor/Start Menu/Power Button" method="_on_pressed"]
[connection signal="pressed" from="StartMenuAnchor/Start Menu/Settings Button" to="StartMenuAnchor/Start Menu/Settings Button" method="_on_pressed"]
[connection signal="mouse_entered" from="Taskbar/HBoxContainer/Start Button" to="Taskbar/HBoxContainer/Start Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Taskbar/HBoxContainer/Start Button" to="Taskbar/HBoxContainer/Start Button" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Taskbar/HBoxContainer/Trashcan" to="Taskbar/HBoxContainer/Trashcan/TrashcanButton" method="_on_trashcan_mouse_entered"]
[connection signal="mouse_exited" from="Taskbar/HBoxContainer/Trashcan" to="Taskbar/HBoxContainer/Trashcan/TrashcanButton" method="_on_trashcan_mouse_exited"]
[connection signal="pressed" from="Taskbar/HBoxContainer/Trashcan/TrashcanButton" to="Taskbar/HBoxContainer/Trashcan/TrashcanButton" method="_on_pressed"]
[connection signal="pressed" from="Taskbar/HBoxContainer/RestartButton/Button" to="Taskbar/HBoxContainer/RestartButton" method="_on_button_pressed"]
[connection signal="pressed" from="Taskbar/HBoxContainer/SpeedUp/Button" to="Taskbar/HBoxContainer/SpeedUp" method="_on_button_pressed"]
[connection signal="pressed" from="Taskbar/HBoxContainer/LevelMenu/Button" to="Taskbar/HBoxContainer/LevelMenu" method="_on_button_pressed"]

[editable path="StartMenuAnchor/Start Menu/BlockItemButton/BoardButton"]
[editable path="StartMenuAnchor/Start Menu/BlockItemButton/SpringButton"]
